--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,22 @@ header {
 .bush {
   font-family: "Brush Script MT";
 }
+
+.card-header:hover {
+  background-color: #0056931e;
+  transition: 0.3s all ease-out;
+}
+
+/*SCROLLBAR*/
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #dddbdb;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #999999;
+}
