--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,35 @@ header {
   color: #005693;
 }
 
-.bush {
+.brush {
   font-family: "Brush Script MT";
+  color: #005693;
+  //text-shadow: 0 0 30px white;
+ 
+}
+.sliderbrush{
+  font-family: "Brush Script MT";
+  color: rgb(245, 245, 245);
+  background: rgba(192, 192, 192, 0.4);
+}
+.pSlider {
+  //font-family: "Brush Script MT";
+  //color:#005693;
+  font-size: 15px;
+  text-shadow: 0 0 30px black;
+  //background-color: grey;
+  //opacity: 0.2;
+  background: rgba(192, 192, 192, 0.4);
+}
+.h2-kamer{
+  font-family: "Brush Script MT";
+  font-size: 30px;
+  color: #005693;
+}
+.h2-kamer-lg{
+  font-family: "Brush Script MT";
+  font-size: 40px;
+  color: #005693;
 }
 .carousel-inner {
   width: 100%;
