--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,8 +51,8 @@ header {
   background-color: #999999;
 }
 
-.sliderbrush{
-  font-family: "Brush Script MT";
+.cslider{
+  font-size: 60px;
   color: rgb(245, 245, 245);
   background: rgba(192, 192, 192, 0.4);
 }
@@ -76,7 +76,7 @@ header {
   color: #005693;
 }
 .carousel-inner {
-  width: 100git %;
+  width: 100%;
   margin: 0 auto;
 }
 .important_info {
