--- a/src/app/backend/components/restaurant/restaurant.component.html
+++ b/src/app/backend/components/restaurant/restaurant.component.html
@@ -2,14 +2,14 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th>Tafel nummer</th>
-        <th>Aantal personen</th>
+        <th>Nummer</th>
+        <th>Personen</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let tafel of tafels">
-        <td> {{tafel.tafelNummer}}</td>
-        <td>{{tafel.aantalPersonen}}</td>
+        <td>{{tafel.nummer}}</td>
+        <td>{{tafel.personen}}</td>
       </tr>
     </tbody>
   </table>
