--- a/src/app/backend/backend.component.html
+++ b/src/app/backend/backend.component.html
@@ -26,13 +26,13 @@
                 </h6>
                 <ul class="nav flex-column mb-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="backend/restaurant">Tafels</a>
+                        <a class="nav-link" href="backend/restaurant/tafels">Tafels</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="backend/restaurant">Gerechten</a>
+                        <a class="nav-link" href="backend/restaurant/gerechten">Gerechten</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="backend/restaurant">Ingredienten</a>
+                        <a class="nav-link" href="backend/restaurant/ingredienten">Ingredienten</a>
                     </li>
                 </ul>
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
