login link repaired

--- a/src/app/frontend/frontend.component.html
+++ b/src/app/frontend/frontend.component.html
@@ -9,7 +9,7 @@
     <a class="p-2 text-dark" href="/activiteiten">Activiteiten</a>
     <a class="p-2 text-dark" href="/contact">Contact</a>
   </nav>
-  <a class="btn btn-outline-primary" href="login.html">Login</a>
+  <a class="btn btn-outline-primary" href="login">Login</a>
 </header>
 
 <router-outlet></router-outlet>
