knoppen toegevoegd aan kamers

--- a/src/app/backend/components/kamers/kamers.component.html
+++ b/src/app/backend/components/kamers/kamers.component.html
@@ -31,6 +31,7 @@
             <td>{{kamer.kamerLigging}}</td>
             <td>{{kamer.aantalPersonen}}</td>
             <td>{{kamer.prijs |currency:'EUR'}}</td>
+            <td style="text-align: right"><button type="button" class="btn btn-primary btn-sm">Wijzigen</button></td>
           </tr>
       </tbody>
     </table>
