--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -11,13 +11,14 @@
       <div class="container">
         <div class="carousel-caption">
           <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje geluk
+          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-                  data-target="#modalReservation">Reserveer
+            data-target="#modalReservation">Reserveer
           </button>
         </div>
       </div>
@@ -27,13 +28,14 @@
       <div class="container">
         <div class="carousel-caption">
           <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje geluk
+          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-                  data-target="#modalReservation">Reserveer
+            data-target="#modalReservation">Reserveer
           </button>
         </div>
       </div>
@@ -43,13 +45,14 @@
       <div class="container">
         <div class="carousel-caption">
           <h1 class="cslider">RESTAURANT</h1>
-          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje geluk
+          <p class="pSlider">Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
+            geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
             vrienden. Een perfecte reden om even samen te ontspannen en heerlijk te genieten van de
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <button type="button" class="btn btn-primary mb-4 mt-4" data-toggle="modal"
-                  data-target="#modalReservation">Reserveer
+            data-target="#modalReservation">Reserveer
           </button>
         </div>
       </div>
@@ -71,28 +74,18 @@
     Reserveer
   </button>
 
-  <div class="accordion" id="accordionMenu">
-    <div class="card">
-      <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne"
-           aria-expanded="true" aria-controls="collapseOne">
-        <h2 class="mb-0">
-          <button class="btn btn-link" type="button">
-            Voorgerecht
-          </button>
-        </h2>
-      </div>
-
-      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionMenu">
-        <div class="card-body">
-          <table class="table table-striped table-borderless">
-            <thead>
+  <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+    <ngb-panel title="Voorgerechten">
+      <ng-template ngbPanelContent>
+        <table class="table table-striped table-borderless">
+          <thead>
             <tr class="d-flex">
               <th class="col-1"></th>
               <th class="col-8">Gerecht</th>
               <th class="col-3">Prijs</th>
             </tr>
-            </thead>
-            <tbody>
+          </thead>
+          <tbody>
             <tr class="d-flex">
               <td class="col-1">1</td>
               <td class="col-8">Salade Falafel</td>
@@ -118,31 +111,21 @@
               <td class="col-8">Salade Carpaccio</td>
               <td class="col-3">€ 14,50</td>
             </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo"
-           aria-expanded="true" aria-controls="collapseTwo">
-        <h2 class="mb-0">
-          <button class="btn btn-link collapsed" type="button">
-            Hoofdgerecht
-          </button>
-        </h2>
-      </div>
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionMenu">
-        <div class="card-body">
-          <table class="table table-striped table-borderless">
-            <thead>
+          </tbody>
+        </table>
+      </ng-template>
+    </ngb-panel>
+    <ngb-panel title="Hoofdgerechten">
+      <ng-template ngbPanelContent>
+        <table class="table table-striped table-borderless">
+          <thead>
             <tr class="d-flex">
               <th class="col-1"></th>
               <th class="col-8">Gerecht</th>
               <th class="col-3">Prijs</th>
             </tr>
-            </thead>
-            <tbody>
+          </thead>
+          <tbody>
             <tr class="d-flex">
               <td class="col-1">6</td>
               <td class="col-8">Hongaarse Varkensschnitzel</td>
@@ -168,31 +151,21 @@
               <td class="col-8">Lamsrack</td>
               <td class="col-3">€ 24,50</td>
             </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree"
-           aria-expanded="true" aria-controls="collapseThree">
-        <h2 class="mb-0">
-          <button class="btn btn-link collapsed" type="button" >
-            Nagerecht
-          </button>
-        </h2>
-      </div>
-      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionMenu">
-        <div class="card-body">
-          <table class="table table-striped table-borderless">
-            <thead>
+          </tbody>
+        </table>
+      </ng-template>
+    </ngb-panel>
+    <ngb-panel title="Nagerechten">
+      <ng-template ngbPanelContent>
+        <table class="table table-striped table-borderless">
+          <thead>
             <tr class="d-flex">
               <th class="col-1"></th>
               <th class="col-8">Gerecht</th>
               <th class="col-3">Prijs</th>
             </tr>
-            </thead>
-            <tbody>
+          </thead>
+          <tbody>
             <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
               <td class="col-1">11</td>
               <td class="col-8">Dame Blanche</td>
@@ -218,16 +191,16 @@
               <td class="col-8">Kaasplankje</td>
               <td class="col-3">€ 11,50</td>
             </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
+          </tbody>
+        </table>
+      </ng-template>
+    </ngb-panel>
+  </ngb-accordion>
+
 
   <!-- Modal -->
   <div class="modal fade" id="modalReservation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-       aria-hidden="true">
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header text-center">
@@ -241,25 +214,21 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputVoornaam">Voornaam</label>
-                <input type="text" class="form-control" id="inputVoornaam" placeholder="Voornaam"
-                       required>
+                <input type="text" class="form-control" id="inputVoornaam" placeholder="Voornaam" required>
               </div>
               <div class="form-group col-md-6">
                 <label for="inputAchternaam">Achternaam</label>
-                <input type="text" class="form-control" id="inputAchternaam"
-                       placeholder="Achternaam" required>
+                <input type="text" class="form-control" id="inputAchternaam" placeholder="Achternaam" required>
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputPostcode">Postcode</label>
-                <input type="text" class="form-control" id="inputPostcode" placeholder="Postcode"
-                       required>
+                <input type="text" class="form-control" id="inputPostcode" placeholder="Postcode" required>
               </div>
               <div class="form-group col-md-6">
                 <label for="inputHuisnummer">Huisnummer</label>
-                <input type="text" class="form-control" id="inputHuisnummer"
-                       placeholder="Huisnummer" required>
+                <input type="text" class="form-control" id="inputHuisnummer" placeholder="Huisnummer" required>
               </div>
             </div>
             <div class="form-group">
@@ -268,8 +237,7 @@
             </div>
             <div class="form-group">
               <label for="inputTelefoonnummer">Telefoonnummer</label>
-              <input type="tel" class="form-control" id="inputTelefoonnummer"
-                     placeholder="Telefoonnummer" required>
+              <input type="tel" class="form-control" id="inputTelefoonnummer" placeholder="Telefoonnummer" required>
             </div>
             <div class="form-group">
               <label for="inputAantal">Aantal personen</label>
