--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -74,7 +74,7 @@
     Reserveer
   </button>
 
-  <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+  <ngb-accordion #acc="ngbAccordion">
     <ngb-panel title="Voorgerechten">
       <ng-template ngbPanelContent>
         <table class="table table-striped table-borderless">
