--- a/src/app/frontend/components/home/home.component.html
+++ b/src/app/frontend/components/home/home.component.html
@@ -1,63 +1,36 @@
 <main role="main">
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/img/room.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <ngb-carousel *ngIf="images">
+        <ng-template ngbSlide>
+          <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
           <div class="carousel-caption">
-            <h1 class="cslider">KAMERS</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
-            <!--p><button type="button" class="btn btn-primary" data-target="kamers.html">Boeken</button></p-->
-            <a href="kamers.html" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
+            <h3>KAMERS</h3>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <a href="/kamers" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
           </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/restaurant.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
+        </ng-template>
+        <ng-template ngbSlide>
+          <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
           <div class="carousel-caption">
-            <h1 class="cslider">RESTAURANT</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Boeken</a></p-->
-            <!--p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p-->
-            <a href="restaurant.html" class="btn btn-primary" role="button"
-               aria-pressed="true">Boeken</a>
+            <h3>RESTAURANT</h3>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
+            <a href="/restaurant" class="btn btn-primary" role="button"  aria-pressed="true">Boeken</a>
           </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/activity.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
+        </ng-template>
+        <ng-template ngbSlide>
+          <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
           <div class="carousel-caption">
-            <h1 class="cslider">ACTIVITEITEN</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
-            <!--p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p-->
-            <a href="activiteiten.html" class="btn btn-primary" role="button"
-               aria-pressed="true">Boeken</a>
+            <h3>ACTIVITEITEN</h3>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit</p>
+            <a href="/activiteiten" class="btn btn-primary" role="button" aria-pressed="true">Boeken</a>
           </div>
-        </div>
-      </div>
+        </ng-template>
+      </ngb-carousel>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
+
   <div>
     <br>
   </div>
