--- a/src/app/frontend/components/kamers/kamers.component.html
+++ b/src/app/frontend/components/kamers/kamers.component.html
@@ -1,76 +1,45 @@
 
 <main role="main">
-
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="assets/img/room-luxe.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1 class="cslider">LUXE KAMERS</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-              elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
-            <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-          </div>
+<div class="row">
+  <div class="col-lg-12">
+    <ngb-carousel *ngIf="images">
+      <ng-template ngbSlide>
+        <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption">
+          <h3>LUXE KAMERS</h3>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/room-standard.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1 class="cslider">STANDAARD KAMERS</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-              elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Boeken</a></p-->
-            <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-          </div>
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption">
+          <h3>STANDAARD KAMERS</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="assets/img/room-budget.jpg" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1 class="cslider">BUDGET KAMERS</h1>
-            <p class="pSlider">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id
-              elit non mi porta
-              gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <!--p><a class="btn btn-lg btn-primary" href="#" role="button">Informatie</a></p-->
-            <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
-          </div>
+      </ng-template>
+      <ng-template ngbSlide>
+        <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
+        <div class="carousel-caption">
+          <h3>BUDGET KAMERS</h3>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          <p><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Boeken</button></p>
         </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      </ng-template>
+    </ngb-carousel>
   </div>
+</div>
+
   <div>
     <br>
   </div>
-
-  <!-- Marketing messaging and featurettes
-================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
   <div class="container marketing">
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="rounded-circle ml-4" src="assets/img/thumb_kamer_budget.jpg" class="d-block w-100" margin=auto>
+        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_budget.jpg" margin=auto>
         <h2 class="text-center h2-kamer">Budget</h2>
         <h5 class="text-center h2-kamer">Vanaf € 35,-</h5>
         <p>Een warme en stijlvolle hotelkamer met eigen balkon. De kamer beschikt over een bureau,
@@ -86,7 +55,7 @@
         </div>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="rounded-circle ml-4" src="assets/img/thumb_kamer_standaard.jpg" class="d-block w-100" margin=auto>
+        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_standaard.jpg" margin=auto>
         <h2 class="text-center h2-kamer">Standaard</h2>
         <h5 class="text-center h2-kamer">Vanaf € 50,-</h5>
         <p>De ruime suite beschikt over een apart zitgedeelte en balkon met uitzicht op het bos. De
@@ -101,7 +70,7 @@
         </div>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="rounded-circle ml-4" src="assets/img/thumb_kamer_lux.jpg" class="d-block w-100" margin=auto>
+        <img class="rounded-circle ml-4 d-block w-100" src="assets/img/thumb_kamer_lux.jpg" margin=auto>
         <h2 class="text-center h2-kamer">Luxe</h2>
         <h5 class="text-center h2-kamer">Vanaf € 65,-</h5>
         <p>Een ruim ingerichte kamer met terras. Voorzien van een bureau, flatscreen televisie en radio.
