--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -74,125 +74,131 @@
     Reserveer
   </button>
 
-  <ngb-accordion #acc="ngbAccordion">
-    <ngb-panel title="Voorgerechten">
+  <ngb-accordion [closeOthers]="true" activeIds="">
+    <ngb-panel id="static-1" title="Voorgerecht">
       <ng-template ngbPanelContent>
-        <table class="table table-striped table-borderless">
-          <thead>
-            <tr class="d-flex">
-              <th class="col-1"></th>
-              <th class="col-8">Gerecht</th>
-              <th class="col-3">Prijs</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="d-flex">
-              <td class="col-1">1</td>
-              <td class="col-8">Salade Falafel</td>
-              <td class="col-3">€ 13,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">2</td>
-              <td class="col-8">Salade Geitenkaas</td>
-              <td class="col-3">€ 14,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">3</td>
-              <td class="col-8">Salade Black Angus</td>
-              <td class="col-3">€ 15,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">4</td>
-              <td class="col-8">Salade Sashimi</td>
-              <td class="col-3">€ 15,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">5</td>
-              <td class="col-8">Salade Carpaccio</td>
-              <td class="col-3">€ 14,50</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="card-body">
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr class="d-flex">
+                <th class="col-1"></th>
+                <th class="col-8">Gerecht</th>
+                <th class="col-3">Prijs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="d-flex">
+                <td class="col-1">1</td>
+                <td class="col-8">Salade Falafel</td>
+                <td class="col-3">€ 13,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">2</td>
+                <td class="col-8">Salade Geitenkaas</td>
+                <td class="col-3">€ 14,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">3</td>
+                <td class="col-8">Salade Black Angus</td>
+                <td class="col-3">€ 15,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">4</td>
+                <td class="col-8">Salade Sashimi</td>
+                <td class="col-3">€ 15,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">5</td>
+                <td class="col-8">Salade Carpaccio</td>
+                <td class="col-3">€ 14,50</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </ng-template>
     </ngb-panel>
-    <ngb-panel title="Hoofdgerechten">
+    <ngb-panel title="Hoofdgerecht">
       <ng-template ngbPanelContent>
-        <table class="table table-striped table-borderless">
-          <thead>
-            <tr class="d-flex">
-              <th class="col-1"></th>
-              <th class="col-8">Gerecht</th>
-              <th class="col-3">Prijs</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="d-flex">
-              <td class="col-1">6</td>
-              <td class="col-8">Hongaarse Varkensschnitzel</td>
-              <td class="col-3">€ 18,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">7</td>
-              <td class="col-8">Varkenshaassaté</td>
-              <td class="col-3">€ 21,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">8</td>
-              <td class="col-8">Sukade Steak</td>
-              <td class="col-3">€ 22,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">9</td>
-              <td class="col-8">Gevulde Varkenshaas</td>
-              <td class="col-3">€ 20,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">10</td>
-              <td class="col-8">Lamsrack</td>
-              <td class="col-3">€ 24,50</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="card-body">
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr class="d-flex">
+                <th class="col-1"></th>
+                <th class="col-8">Gerecht</th>
+                <th class="col-3">Prijs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="d-flex">
+                <td class="col-1">6</td>
+                <td class="col-8">Hongaarse Varkensschnitzel</td>
+                <td class="col-3">€ 18,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">7</td>
+                <td class="col-8">Varkenshaassaté</td>
+                <td class="col-3">€ 21,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">8</td>
+                <td class="col-8">Sukade Steak</td>
+                <td class="col-3">€ 22,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">9</td>
+                <td class="col-8">Gevulde Varkenshaas</td>
+                <td class="col-3">€ 20,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">10</td>
+                <td class="col-8">Lamsrack</td>
+                <td class="col-3">€ 24,50</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </ng-template>
     </ngb-panel>
-    <ngb-panel title="Nagerechten">
+    <ngb-panel title="Nagerecht">
       <ng-template ngbPanelContent>
-        <table class="table table-striped table-borderless">
-          <thead>
-            <tr class="d-flex">
-              <th class="col-1"></th>
-              <th class="col-8">Gerecht</th>
-              <th class="col-3">Prijs</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
-              <td class="col-1">11</td>
-              <td class="col-8">Dame Blanche</td>
-              <td class="col-3">€ 7,00</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">12</td>
-              <td class="col-8">Creme Anglaise</td>
-              <td class="col-3">€ 7,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">13</td>
-              <td class="col-8">Nutella Parfait</td>
-              <td class="col-3">€ 7,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">14</td>
-              <td class="col-8">Creme Brulee Van Limoncello </td>
-              <td class="col-3">€ 7,50</td>
-            </tr>
-            <tr class="d-flex">
-              <td class="col-1">15</td>
-              <td class="col-8">Kaasplankje</td>
-              <td class="col-3">€ 11,50</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="card-body">
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr class="d-flex">
+                <th class="col-1"></th>
+                <th class="col-8">Gerecht</th>
+                <th class="col-3">Prijs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">11</td>
+                <td class="col-8">Dame Blanche</td>
+                <td class="col-3">€ 7,00</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">12</td>
+                <td class="col-8">Creme Anglaise</td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">13</td>
+                <td class="col-8">Nutella Parfait</td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">14</td>
+                <td class="col-8">Creme Brulee Van Limoncello </td>
+                <td class="col-3">€ 7,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">15</td>
+                <td class="col-8">Kaasplankje</td>
+                <td class="col-3">€ 11,50</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </ng-template>
     </ngb-panel>
   </ngb-accordion>
