--- a/src/app/backend/components/kamers/kamers.component.html
+++ b/src/app/backend/components/kamers/kamers.component.html
@@ -2,36 +2,44 @@
 <div class="table-responsive">
     <!--pre>{{kamers | json}}</pre-->
     <br>
+   
+
     <div class="row">
         <div class="col-2">
-          <button type="button" class="btn btn-info">All Rooms</button>
+          <button type="button" class="btn btn-info"(click)="showAllRooms()">All Rooms</button>
         </div>
         <div class="col-2">
-            <button type="button" class="btn btn-success" onclick="ShowReservedRooms()">Free Rooms</button>
+            <button type="button" class="btn btn-success" (click)="showFreeRooms()">Free Rooms</button>
           </div>
-          <div class="col-2">
-              <button type="button" class="btn btn-danger">Booked Rooms</button>
-            </div>
+        <!--div class="col-2">
+            <button type="button" class="btn btn-warning" (click)="showReservedRooms()">Reserved Rooms</button>
+          </div-->
+        <div class="col-2">
+              <button type="button" class="btn btn-danger" (click)="showBookedRooms()">Booked Rooms</button>
+        </div>
+        
       </div>
+      
       <br>
     <table class="table table-striped table-sm">
       <thead>
         <tr>
           <th>Kamernummer</th>
-          <th>Kamertype</th>
+          <th scope="col" sortable="name" (sort)="onSort($event)">Kamertype</th>
           <th>Kamerligging</th>
           <th>Aantalpersonen</th>
           <th>Prijs</th>
         </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let kamer of kamers" >
+          <tr *ngFor="let kamer of kamers | kamersfilter:show" >
             <td>{{kamer.kamerNummer}}</td>
             <td>{{kamer.kamerType}}</td>
             <td>{{kamer.kamerLigging}}</td>
             <td>{{kamer.aantalPersonen}}</td>
             <td>{{kamer.prijs |currency:'EUR'}}</td>
             <td style="text-align: right"><button type="button" class="btn btn-primary btn-sm">Wijzigen</button></td>
+            <td style="text-align: right"><button type="button" class="btn btn-danger btn-sm" (click)="deleteRoom(kamer)">Verwijderen</button></td>
           </tr>
       </tbody>
     </table>
