--- a/src/app/frontend/components/login/login.component.html
+++ b/src/app/frontend/components/login/login.component.html
@@ -1,4 +1,5 @@
-<form class="form-signin">
+<div class="login mx-auto">
+  <form class="form-signin" action='./backend/home'>
   <img class="mb-4" src="assets/img/assets/img/logo-128.png" alt="">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
@@ -13,3 +14,4 @@
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
 </form>
+</div>
