--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -29,8 +29,8 @@
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <p>
-              <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
-            </p>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+          </p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
@@ -44,8 +44,8 @@
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <p>
-              <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
-            </p>
+            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+          </p>
         </div>
       </ng-template>
     </ngb-carousel>
@@ -175,6 +175,66 @@
                 <td class="col-1">15</td>
                 <td class="col-8">Kaasplankje</td>
                 <td class="col-3">€ 11,50</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </ng-template>
+    </ngb-panel>
+    <ngb-panel title="Drankkaart">
+      <ng-template ngbPanelContent>
+        <div class="card-body">
+          <h4>Frisdrank</h4>
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr class="d-flex">
+                <th class="col-1"></th>
+                <th class="col-8"></th>
+                <th class="col-3">Prijs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">16</td>
+                <td class="col-8">Sinas</td>
+                <td class="col-3">€ 2,00</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">17</td>
+                <td class="col-8">Cola</td>
+                <td class="col-3">€ 2,50</td>
+              </tr>
+              <tr class="d-flex">
+                <td class="col-1">18</td>
+                <td class="col-8">Spa blauw</td>
+                <td class="col-3">€ 1,50</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4 class="mt-4">Alcohol</h4>
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr class="d-flex">
+                <th class="col-1"></th>
+                <th class="col-8"></th>
+                <th class="col-3">Prijs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">19</td>
+                <td class="col-8">Wijn</td>
+                <td class="col-3">€ 3,00</td>
+              </tr>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">20</td>
+                <td class="col-8">Bier</td>
+                <td class="col-3">€ 2,50</td>
+              </tr>
+              <tr class="d-flex" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                <td class="col-1">21</td>
+                <td class="col-8">Whisky</td>
+                <td class="col-3">€ 4,00</td>
               </tr>
             </tbody>
           </table>
