--- a/src/app/backend/components/restaurant/gerechten/gerechten.component.html
+++ b/src/app/backend/components/restaurant/gerechten/gerechten.component.html
@@ -4,6 +4,7 @@
       <tr>
         <th>Naam</th>
         <th>Type</th>
+        <th>SubType</th>
         <th>Prijs</th>
       </tr>
     </thead>
@@ -11,6 +12,7 @@
       <tr *ngFor="let gerecht of gerechten">
         <td>{{gerecht.naam}}</td>
         <td>{{gerecht.type}}</td>
+        <td>{{gerecht.subtype}}</td>
         <td>{{gerecht.prijs | currency: 'EUR'}}</td>
       </tr>
     </tbody>
