--- a/src/app/backend/components/restaurant/tafels/tafels.component.html
+++ b/src/app/backend/components/restaurant/tafels/tafels.component.html
@@ -1,16 +1,21 @@
 <div class="table-responsive">
+<button class="btn" (click)="show=!show">Toon alles of vrij</button>
   <table class="table table-striped table-sm">
     <thead>
       <tr>
         <th>Nummer</th>
         <th>Personen</th>
+        <th>Tafel status</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let tafel of tafels">
+      <tr *ngFor="let tafel of tafels | filter: tableFilterFunction: show">
         <td>{{tafel.nummer}}</td>
         <td>{{tafel.personen}}</td>
+        <td *ngIf="tafel.vrij">Tafel is vrij</td>
+        <td *ngIf="!tafel.vrij">Tafel is bezet</td>
       </tr>
     </tbody>
   </table>
 </div>
+
