--- a/src/app/backend/components/restaurant/tafels/tafels.component.html
+++ b/src/app/backend/components/restaurant/tafels/tafels.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-<button class="btn" (click)="show=!show">Toon alles of vrij</button>
+<button class="btn-block btn-lg" (click)="show=!show">Klik voor een totaal/vrij overzicht</button>
   <table class="table table-striped table-sm">
     <thead>
       <tr>
