get tafels from service

--- a/src/app/backend/components/restaurant/tafels/tafels.component.html
+++ b/src/app/backend/components/restaurant/tafels/tafels.component.html
@@ -7,7 +7,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let tafel of tafels">
+      <tr *ngFor="let tafel of (tafels | async)">
         <td>{{tafel.nummer}}</td>
         <td>{{tafel.personen}}</td>
       </tr>
