--- a/src/app/backend/components/restaurant/ingredienten/ingredienten.component.html
+++ b/src/app/backend/components/restaurant/ingredienten/ingredienten.component.html
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ingredient of ingredienten">
+      <tr *ngFor="let ingredient of (ingredienten | async)">
         <td>{{ingredient.naam}}</td>
         <td>{{ingredient.soort}}</td>
         <td>{{ingredient.prijs | currency: 'EUR'}}</td>
