--- a/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/src/app/frontend/components/restaurant/restaurant.component.html
@@ -5,8 +5,8 @@
     <ngb-carousel *ngIf="images">
       <ng-template ngbSlide>
         <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>RESTAURANT</h3>
+        <div class="carousel-caption carousel-inner-text">
+          <h2>RESTAURANT</h2>
           <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
@@ -20,8 +20,8 @@
       </ng-template>
       <ng-template ngbSlide>
         <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>RESTAURANT</h3>
+        <div class="carousel-caption carousel-inner-text">
+          <h2>RESTAURANT</h2>
           <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
@@ -35,8 +35,8 @@
       </ng-template>
       <ng-template ngbSlide>
         <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
-        <div class="carousel-caption">
-          <h3>RESTAURANT</h3>
+        <div class="carousel-caption carousel-inner-text">
+          <h2>RESTAURANT</h2>
           <p>Het wordt winter! De sjaal mag weer uit de kast, de handschoenen aan en met een beetje
             geluk
             mogen zelfs de schaatsen ingevet worden. De winter, de tijd van gezelligheid met elkaar en
