Carousel tekst activiteiten aangepast.

--- a/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -5,7 +5,7 @@
         <img [src]="images[0]" alt="Random first slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>ACTIVITEITEN</h2>
-          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
             <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
@@ -15,7 +15,7 @@
         <img [src]="images[1]" alt="Random second slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>ACTIVITEITEN</h2>
-          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
             <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
@@ -25,7 +25,7 @@
         <img [src]="images[2]" alt="Random third slide" style="width:100%; height:100%; background:#777; color:#777;">
         <div class="carousel-caption carousel-inner-text">
           <h2>ACTIVITEITEN</h2>
-          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijkt u regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
+          <p>Bij ons hoeft u zich nooit te vervelen. Wij bieden een groot aanbood aan activiteiten. Er is voor een ieder wat wils. Kijk regelmatig in ons steeds wisselende aanbod. We zien u graag terug. U bent van harte welkom!</p>
           <p>
             <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
           </p>
