--- a/src/app/shared/components/form-tafel/form-tafel.component.html
+++ b/src/app/shared/components/form-tafel/form-tafel.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <form [formGroup]="tafelsForm">
+  <form [formGroup]="tafelForm">
     <div class="form-group">
       <label>Tafelnummer</label>
       <input
@@ -28,7 +28,7 @@
       <small class="text-danger" [class.d-none]="aantalPersonen?.valid || aantalPersonen?.untouched">minimaal 1 en maximaal 12</small>
     </div>
   </form>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('save')" [disabled]="tafelsForm.invalid">Save</button>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="submitForm()" [disabled]="tafelForm.invalid">Save</button>
+  </div>
 </div>
