added gerecht form

--- a/src/app/backend/components/restaurant/gerechten/gerechten.component.html
+++ b/src/app/backend/components/restaurant/gerechten/gerechten.component.html
@@ -1,3 +1,5 @@
+<button class="btn btn-primary mt-2" (click)="openFormGerechtModal()">Nieuw</button>
+
 <div class="table-responsive">
   <table class="table table-striped table-sm">
     <thead>
@@ -6,6 +8,7 @@
         <th>Type</th>
         <th>SubType</th>
         <th>Prijs</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -14,6 +17,10 @@
         <td>{{gerecht.type}}</td>
         <td>{{gerecht.subtype}}</td>
         <td>{{gerecht.prijs | currency: 'EUR'}}</td>
+        <td class="text-right">
+          <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="openFormGerechtModal(gerecht)"></i>
+          <i class="fas fa-trash-alt mr-2" placement="top" ngbTooltip="Verwijderen" (click)="verwijderGerecht(gerecht)"></i>
+        </td>
       </tr>
     </tbody>
   </table>
