changed form save button

--- a/src/app/shared/components/form-gerecht/form-gerecht.component.html
+++ b/src/app/shared/components/form-gerecht/form-gerecht.component.html
@@ -41,6 +41,6 @@
     </div>
   </form>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="submitForm()" [disabled]="gerechtForm.invalid">Save</button>
+    <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="gerechtForm.invalid">Save</button>
   </div>
 </div>
