--- a/src/app/shared/components/form-ingredient/form-ingredient.component.html
+++ b/src/app/shared/components/form-ingredient/form-ingredient.component.html
@@ -27,6 +27,6 @@
     </div>
   </form>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="submitForm()" [disabled]="ingredientForm.invalid">Save</button>
+    <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="ingredientForm.invalid">Save</button>
   </div>
 </div>
