--- a/src/app/shared/components/form-tafel/form-tafel.component.html
+++ b/src/app/shared/components/form-tafel/form-tafel.component.html
@@ -29,6 +29,6 @@
     </div>
   </form>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="submitForm()" [disabled]="tafelForm.invalid">Save</button>
+    <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="tafelForm.invalid">Save</button>
   </div>
 </div>
