--- a/src/app/backend/components/kamers/kamers-form/kamers-form-test/kamers-form-test.component.html
+++ b/src/app/backend/components/kamers/kamers-form/kamers-form-test/kamers-form-test.component.html
@@ -1,12 +1,12 @@
-<ng-template #content let-modal>
+
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
-      <!--form>
+      <form>
         <div class="form-group">
           <label for="dateOfBirth">Date of birth</label>
           <div class="input-group">
@@ -16,16 +16,11 @@
             </div>
           </div>
         </div>
-      </form-->
-      <app-kamers-form></app-kamers-form>
+      </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+      <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Save click')">Save</button>
     </div>
-  </ng-template>
+
 
   <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
-
-  <hr>
-
-  <pre>{{closeResult}}</pre>
