--- a/src/app/backend/components/kamers/kamers.component.html
+++ b/src/app/backend/components/kamers/kamers.component.html
@@ -1,81 +1,121 @@
-<div class="table-responsive">
+<div class="table-responsive w-100">
   <!--pre>{{kamers | json}}</pre-->
-  <br>
-
+  <br />
 
   <div class="row">
     <div class="col-2">
-      <button type="button" class="btn btn-info" (click)="showAllRooms()">All Rooms</button>
+      <button type="button" class="btn btn-info" (click)="showAllRooms()">
+        All Rooms
+      </button>
     </div>
     <div class="col-2">
-      <button type="button" class="btn btn-success" (click)="showFreeRooms()">Free Rooms</button>
-    </div>
-    <div class="col-2">
-      <!--button type="button" class="btn btn-warning" (click)="addRoom()">Add Room</button-->
-      <a href="/backend/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a>
-    </div>
-    <div class="col-2">
-      <button type="button" class="btn btn-danger" (click)="showBookedRooms()">Booked Rooms</button>
+      <button type="button" class="btn btn-success" (click)="showFreeRooms()">
+        Free Rooms
+      </button>
     </div>
 
+    <div class="col-2">
+      <button type="button" class="btn btn-warning" (click)="showBookedRooms()">
+        Booked Rooms
+      </button>
+    </div>
+    <div class="col-6 text-right">
+        <button type="button" class="btn btn-primary" (click)="openNewFormModal()">Add Room</button>
+        <!--a href="/backend/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a-->
+      </div>
   </div>
 
-  <br>
+  <br />
   <table class="table table-striped table-sm">
     <thead>
       <tr>
         <th>Kamernummer</th>
-        <th scope="col" sortable="name" (sort)="onSort($event)">Kamertype</th>
+        <th>Kamertype</th>
         <th>Kamerligging</th>
         <th>Aantalpersonen</th>
         <th>Prijs</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let kamer of kamers | kamersfilter:show">
-        <td>{{kamer.kamerNummer}}</td>
-        <td>{{kamer.kamerType}}</td>
-        <td>{{kamer.kamerLigging}}</td>
-        <td>{{kamer.aantalPersonen}}</td>
-        <td>{{kamer.prijs |currency:'EUR'}}</td>
-        <td style="text-align: right"><button type="button" class="btn btn-primary btn-sm" (click)="onSelect(kamer)">Wijzigen</button></td>
-        <td style="text-align: right"><button type="button" class="btn btn-danger btn-sm" (click)="deleteRoom(kamer)">Verwijderen</button></td>
+      <tr *ngFor="let kamer of (kamers | kamersfilter: show)">
+        <td>{{ kamer.kamerNummer }}</td>
+        <td>{{ kamer.kamerType }}</td>
+        <td>{{ kamer.kamerLigging }}</td>
+        <td>{{ kamer.aantalPersonen }}</td>
+        <td>{{ kamer.prijs | currency: "EUR" }}</td>
+        <td style="text-align: right">
+          <button type="button" class="btn  btn-sm" (click)="onSelect(kamer); openEditFormModal()"><img src="../../../../assets/img/edit-btn.jpg" /></button>
+        </td>
+        <td style="text-align: right">
+          <!--button type="button" class="btn btn-danger btn-sm" (click)="onSelect(kamer); deleteRoom(kamer)"><img src="../../../../assets/img/delete-btn-sm.jpg" /></button-->
+          <button type="button" class="btn  btn-sm" (click)="onSelect(kamer); openSm(deleteModal)"><img src="../../../../assets/img/delete-btn.jpg" /></button>
+        </td>
       </tr>
     </tbody>
   </table>
 </div>
+<pre>{{closeResult | json}}</pre>
+<!--app-kamer-details></app-kamer-details-->
+<!-- Modal to confirm deleting room-->
+<ng-template #deleteModal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Kamer verwijderen</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group">
+          <P>Kamernummer {{selectedKamer?.kamerNummer}} wordt verwijderd.</P>
+          <h3>Weet je het zeker?</h3>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="deleteRoom(selectedKamer); modal.close('Save click')">Ja</button>
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Nee</button>
+    </div>
+  </ng-template>
+  <!-- end of modal-->
+  <!--app-kamers-form [model]="selectedKamer" (roomSubmitted)="onRoomSubmitted($event)"></app-kamers-form-->
+<!--div *ngIf="selectedKamer">
+    <h2> Kamer {{ selectedKamer?.kamerNummer }} Details</h2>
+    <div><span>Kamernummer: </span>{{ selectedKamer?.kamerNummer }}</div>
+    <div>
+      <label
+        >Type kamer:
+        <input [(ngModel)]="selectedKamer.kamerType" placeholder="Type kamer" />
+      </label>
+    </div>
+    <div>
+      <label
+        >Kamer Ligging:
+        <input
+          [(ngModel)]="selectedKamer.kamerLigging"
+          placeholder="kamer Ligging"
+        />
+      </label>
+    </div>
+    <div>
+      <label
+        >Aantal Personen:
+        <input
+          [(ngModel)]="selectedKamer.aantalPersonen"
+          placeholder="Aantal Personen"
+        />
+      </label>
+    </div>
+    <div>
+      <label
+        >Prijs:
+        <input [(ngModel)]="selectedKamer.prijs" placeholder="Prijs" />
+      </label>
+    </div>
+    <button (click)="goBack()">go back</button>
 
-<!--div *ngIf="add">
-      <app-kamers-form></app-kamers-form>
-  </div-->
-<!--app-kamer-detail [kamer]="selectedKamer"></app-kamer-detail-->
 
-<div *ngIf="selectedKamer">
-  <h2>{{selectedKamer.kamerNummer | uppercase}} Details</h2>
-  <div><span>Kamernummer: </span>{{selectedKamer.kamerNummer}}</div>
-  <div>
-    <label>Type kamer:
-      <input [(ngModel)]="selectedKamer.kamerType" placeholder="Type kamer">
-      <!--select class="form-control" [(ngModel)]="selectedKamer.KamerType" name="KamerType" placeholder = "kamerType">
-                <option *ngFor="let type of soortkamer" [value]="selectedKamer.KamerType">{{type}}</option>
-          </select-->
 
-    </label>
-  </div>
-  <div>
-    <label>Kamer Ligging:
-      <input [(ngModel)]="selectedKamer.kamerLigging" placeholder="kamer Ligging">
-    </label>
-  </div>
-  <div>
-    <label>Aantal Personen:
-      <input [(ngModel)]="selectedKamer.aantalPersonen" placeholder="Aantal Personen">
-    </label>
-  </div>
-  <div>
-    <label>Prijs:
-      <input [(ngModel)]="selectedKamer.prijs" placeholder="Prijs">
-    </label>
-  </div>
-  <button (click)="goBack()">go back</button>
-</div>
+</div-->
+
+
