code kamers opgeruimd

--- a/src/app/backend/components/kamers/kamers.component.html
+++ b/src/app/backend/components/kamers/kamers.component.html
@@ -54,7 +54,7 @@
     </tbody>
   </table>
 </div>
-<pre>{{closeResult | json}}</pre>
+<!--pre>{{closeResult | json}}</pre-->
 <!--app-kamer-details></app-kamer-details-->
 <!-- Modal to confirm deleting room-->
 <ng-template #deleteModal let-modal>
