Changed to management-portal

--- a/src/app/frontend/components/login/login.component.html
+++ b/src/app/frontend/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login mx-auto">
-  <form class="form-signin" action='./backend/home'>
+  <form class="form-signin" action='./management-portal/home'>
   <img class="mb-4" src="assets/img/assets/img/logo-128.png" alt="">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
