Changed to managementportal

--- a/src/app/managementportal/managementportal.component.html
+++ b/src/app/managementportal/managementportal.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" [routerLink]="['/management-portal/home']">Molveno Lake Resort</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" [routerLink]="['/managementportal/home']">Molveno Lake Resort</a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" [routerLink]="['/home']">Sign out</a>
@@ -16,7 +16,7 @@
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/management-portal/kamers']" routerLinkActive="active">Kamers</a>
+            <a class="nav-link" [routerLink]="['/managementportal/kamers']" routerLinkActive="active">Kamers</a>
           </li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
@@ -24,13 +24,13 @@
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/management-portal/restaurant/tafels']" routerLinkActive="active">Tafels</a>
+            <a class="nav-link" [routerLink]="['/managementportal/restaurant/tafels']" routerLinkActive="active">Tafels</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/management-portal/restaurant/gerechten']" routerLinkActive="active">Gerechten</a>
+            <a class="nav-link" [routerLink]="['/managementportal/restaurant/gerechten']" routerLinkActive="active">Gerechten</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/management-portal/restaurant/ingredienten']" routerLinkActive="active">Ingredienten</a>
+            <a class="nav-link" [routerLink]="['/managementportal/restaurant/ingredienten']" routerLinkActive="active">Ingredienten</a>
           </li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
@@ -38,7 +38,7 @@
         </h6>
         <ul class="nav flex-column mb-2">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/management-portal/activiteiten']" routerLinkActive="active" >Activiteiten</a>
+            <a class="nav-link" [routerLink]="['/managementportal/activiteiten']" routerLinkActive="active" >Activiteiten</a>
           </li>
         </ul>
       </div>
