--- a/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamerreserveringen/kamerreservering.component.html
@@ -1,6 +1,3 @@
-<div class="d-flex justify-content-end mt-2">
-  <button class="btn btn-primary" (click)="openFormKamerReserveringModal()">Nieuw</button>
-</div>
 
 <div class="table-responsive mt-2">
 <table class="table table-striped table-sm">
@@ -8,21 +5,21 @@
     <tr>
       <th>Voornaam</th>
       <th>Achternaam</th>
-      <th>Telefoonnummer</th>
-      <th>E-mailadres</th>
-      <th>Identiteit ID</th>
+      <th>Telefoon</th>
+      <th>E-mail</th>
+      <th>Identiteit</th>
       <th>Postcode</th>
       <th>Straat</th>
       <th>Huisnummer</th>
       <th>Woonplaats</th>
       <th>Land</th>
-      <th>Aankomst Datum</th>
-      <th>Vertrek Datum</th>
-      <th>Kamer ID</th>
+      <th>Aankomst</th>
+      <th>Vertrek</th>
+      <th>Kamer</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let kamerreservering of (kamerreserveringen | async)">
+    <tr *ngFor="let kamerreservering of kamerreserveringen">
       <td>{{kamerreservering.voornaam}}</td>
       <td>{{kamerreservering.achternaam}}</td>
       <td>{{kamerreservering.telefoonnummer}}</td>
@@ -35,7 +32,7 @@
       <td>{{kamerreservering.land}}</td>
       <td>{{kamerreservering.datumvan}}</td>
       <td>{{kamerreservering.datumtot}} </td>
-      <td>{{kamerreservering.kamerid}}</td>
+      <td>{{kamerreservering.kamernaam}}</td>
     </tr>
   </tbody>
 </table>
