--- a/frontend/src/app/managementportal/managementportal.component.html
+++ b/frontend/src/app/managementportal/managementportal.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/managementportal/kamers']" routerLinkActive="active">Kamers</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/managementportal/kamerreserveringen']" routerLinkActive="active">Kamerreserveringen</a>
+          </li>
         </ul>
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
           <span>RESTAURANT</span>
